<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>model_validation</name>
  <version>1.0.0</version>
  <description>
    ROS 2 nodes that allow evaluation/profiling of the scheduler
  </description>
  <maintainer email="Tobias.Blass@de.bosch.com">Tobias Blass</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rmw</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

